--- a/index.html
+++ b/index.html
@@ -13,8 +13,21 @@
       <li><a href="#">About</a></li>
       <li><a href="#">Services</a></li>
       <li><a href="#">Contact</a></li>
+      <button class="but">form</button>
       
     </ul>
   </nav>  
+  <div class="sidebar">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Contact</a></li>
+      <button>logout</button>
+    </ul>
+  </div>
+  
+
+
 </body>
 </html>
